# protoc-backend

./: .env.example  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
shared/db_helper/: __init__.py  db_helper.py
src/: __init__.py  config.py  main.py
src/dto/: __init__.py  copy_template.py  create_attribute.py  create_daily_condition.py  create_group.py  create_sheet.py  create_standard.py  create_template.py  delete_group.py  delete_template.py  get_attribute_values.py  get_attributes.py  get_daily_condition.py  get_daily_conditions.py  get_file.py  get_files.py  get_group.py  get_groups.py  get_laboratories.py  get_laboratory.py  get_sheet.py  get_sheets.py  get_standard.py  get_standards.py  get_template.py  get_template_attributes.py  get_template_with_attributes.py  get_templates.py  patch_group.py  patch_sheet.py  patch_standard.py  patch_template.py  set_template_attribute.py  update_daily_condition.py  upload_file.py
src/model/: __init__.py  attribute.py  base.py  condition_type.py  daily_condition.py  file.py  group.py  laboratory.py  sheet.py  standard.py  template.py  template_attribute.py
src/usecase/: __init__.py  copy_template.py  create_attribute.py  create_daily_condition.py  create_group.py  create_sheet.py  create_standard.py  create_template.py  delete_daily_condition.py  delete_group.py  delete_standard.py  delete_template.py  get_attribute_values.py  get_attributes.py  get_daily_condition.py  get_daily_conditions.py  get_file.py  get_files.py  get_group.py  get_groups.py  get_laboratories.py  get_laboratory.py  get_sheet.py  (+14 more)
(+62 files in other folders)
